# PECoAutoStage

./: .gitignore  Makefile  Makefile.am  Makefile.debug  Makefile.in  README.md  configure  configure.ac  costage-runner.cpp  costage-runner.h  costage.cpp  costage.h  install_script.sh  main.cpp  modules.cpp  modules.h  report-template.html  report.html  rpn.h
.github/workflows/: ccpp.yml  main.yml
demo/: case1.costage  case2.costage  case3.costage  case4.costage  case5.costage  case6.comodule  case6.costage
